--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
     "dependencies": {
+        "grunt": "^1.0.2",
+        "grunt-cli": "^1.2.0",
+        "grunt-contrib-connect": "^1.0.2",
         "reveal.js": "^3.6.0"
+    },
+    "scripts": {
+        "start": "grunt serve"
     }
 }
