--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "grunt": "^1.0.2",
         "grunt-cli": "^1.2.0",
         "grunt-contrib-connect": "^1.0.2",
+        "grunt-contrib-watch": "^1.0.0",
         "reveal.js": "^3.6.0"
     },
     "scripts": {
